# localization_stack

./: .gitignore  .swp  README.md
localization_node/: CMakeLists.txt  package.xml
localization_node/include/localization_node/grid/: grid_2d.hpp  grid_interface.hpp  point_cloud_insert.hpp  point_cloud_insert_interface.hpp
localization_node/include/localization_node/odom_provider/: odom_interface.hpp
localization_node/include/localization_node/scan_matching/: scan_matcher_interface.hpp
localization_node/include/localization_node/scan_matching/correct_scan/: correct_scan_interface.hpp
localization_node/include/localization_node/scan_matching/fast_scan/: fast_scan_interface.hpp
localization_node/include/localization_node/scan_matching/real_time_scan/: real_time_scan_interface.hpp
localization_node/include/localization_node/sensor/: point_cloud_2d.hpp  point_cloud_interface.hpp  voxel_filter.hpp
localization_node/include/localization_node/transform/: rigid_transform.hpp
localization_node/include/localization_node/utils/: map_limit.hpp  point_tranform.hpp
localization_node/src/grid/: grid_2d.cpp  point_cloud_insert.cpp
localization_node/src/sensor/: point_cloud_2d.cpp  voxel_filter.cpp  voxel_filter_tes.cpp
localization_node/test/: .voxel_filter_test.cpp.swn  .voxel_filter_test.cpp.swo  .voxel_filter_test.cpp.swp  CMakeLists.txt  grid_2d_test.cpp  point_cloud_2d_test.cpp  voxel_filter_test.cpp
robot_localization/: CMakeLists.txt  package.xml
robot_localization/config/: localization_config.yaml
robot_localization/include/robot_localization/mapping/grid/: point_cloud_insertor.hpp  probability_grid.hpp
robot_localization/include/robot_localization/mapping/scan_matching/: ceres_scan_matcher.hpp  correlative_scan_matcher.hpp  fast_scan_matcher.hpp  realtime_scan_matcher.hpp
robot_localization/include/robot_localization/mapping/scan_matching/ceres_cost_functor/: occupied_space_cost.hpp  (+2 more)
robot_localization/include/robot_localization/mapping/sensor/: point_cloud.hpp  voxel_filter.hpp
robot_localization/include/robot_localization/utils/: common.hpp  map_tools.hpp  maths.hpp  sensor.hpp  transform.hpp
robot_localization/src/mapping/grid/: point_cloud_insertor.cpp  probability_grid.cpp
robot_localization/src/mapping/scan_matching/: ceres_scan_matcher.cpp  correlative_scan_matcher.cpp  fast_scan_matcher.cpp  realtime_scan_matcher.cpp
robot_localization/src/mapping/sensor/: point_cloud.cpp  voxel_filter.cpp
robot_localization/test/: CMakeLists.txt  point_cloud_insertor_test.cpp  point_cloud_test.cpp  probability_grid_test.cpp  transform_test.cpp  voxel_filter_test.cpp
